--- a/BERTHOMME/html/Decouverte Less/Exo 4 - maquette 3/style.less
+++ b/BERTHOMME/html/Decouverte Less/Exo 4 - maquette 3/style.less
@@ -1,5 +1,6 @@
 @orange: #fba419;
 @blanc: white;
+@gris: #a1a1a1;
 @noir: #161616;
 @lato: 'Lato', sans-serif;
 
@@ -20,8 +21,8 @@ h1 {
 }
 
 p {
-    font-size: 18px;
-    color: @blanc;
+    font-size: 16px;
+    color: @gris;
 }
 
 span {
@@ -54,4 +55,12 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+}
+
+#citation {
+    p:before {
+        font-family: 'FontAwesome';
+        content: 'f10d'; /* Example icon, replace with desired icon code */
+        margin-right: 8px;
+    }
 }
